# pygmentshtmltemplate

./: .gitignore  README.md  setup.cfg
pygmentshtmltemplate/: __init__.py  docutils.py
pygmentshtmltemplate/templates/: __init__.py
tests/: test_basic.py  test_formatter.py  test_options.py  test_rst.py  test_template.py
tests/resources/: src.py  test_template.html  test_template.xml
