[metadata]
name = pygmentshtmltemplate
version = attr: pygmentshtmltemplate.__version__

[options]
packages_dir = pygmentshtmltemplate
packages =
    pygmentshtmltemplate
install_requires =
    pygments
python_requires = >=3.9

[options.entry_points]
pygments.formatters =
    pygmentshtmltemplate = pygmentshtmltemplate:MyFormatter
